# exercise-displayer

./: BikeDisplayer.cpp  BikeDisplayer.h  BikeFile.txt  CMakeLists.txt  ExerciseDisplayer.cpp  ExerciseDisplayer.h  README.md  RunDisplayer.cpp  RunDisplayer.h  RunFile.txt  SkiDisplayer.cpp  SkiDisplayer.h  SkiFile.txt  graph.py  main.cpp
DataForGraphs/: bikeData.txt  runData.txt  skiData.txt
data/: input.txt
